--- a/client/src/Page/Auth/ChangePassword.scss
+++ b/client/src/Page/Auth/ChangePassword.scss
@@ -9,7 +9,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    box-shadow: 0px 0px 3px colors.$shadow;
+    box-shadow: 0px 0px 3px colors.$color-shadow;
 
     & .change-password-title {
         position: relative;
@@ -50,7 +50,7 @@
                 padding-left: 20px;
                 outline: none;
                 margin-top: 20px;
-                border: 1px solid colors.$shadow;
+                border: 1px solid colors.$color-shadow;
                 border-radius: 5px;
                 position: relative;
                 left: 50%;
@@ -60,7 +60,7 @@
                 &:hover,
                 &:focus,
                 &:active {
-                    box-shadow: 0px 0px 3px colors.$shadow;
+                    box-shadow: 0px 0px 3px colors.$color-shadow;
                 }
             }
 
@@ -72,7 +72,7 @@
                 outline: none;
                 border: none;
                 color: white;
-                background-color: colors.$color-btn;
+                background-color: colors.$color-red;
                 border-radius: 5px;
                 position: absolute;
                 left: 50%;
@@ -81,7 +81,7 @@
                 transition: 0.2s;
 
                 &:hover {
-                    box-shadow: 0px 0px 3px colors.$color-btn;
+                    box-shadow: 0px 0px 3px colors.$color-red;
                 }
             }
         }
