--- a/client/src/Page/Auth/DetailsUser/DetailsUserProfile.scss
+++ b/client/src/Page/Auth/DetailsUser/DetailsUserProfile.scss
@@ -46,8 +46,8 @@
                 height: 40px;
                 // width: 60px;
                 padding: 0px 5px 0px 5px;
-                background-color: colors.$color-btn;
-                color: colors.$text-color;
+                background-color: colors.$color-red;
+                color: colors.$color-text;
                 border: none;
                 border-radius: 3px;
                 font-size: 18px;
@@ -55,7 +55,7 @@
                 cursor: pointer;
 
                 &:hover {
-                    box-shadow: 0px 0px 3px colors.$color-btn;
+                    box-shadow: 0px 0px 3px colors.$color-red;
                 }
             }
         }
@@ -102,7 +102,7 @@
 
                     button {
                         margin-top: 5px;
-                        background-color: colors.$color-btn;
+                        background-color: colors.$color-red;
                         font-size: 17px;
                         color: white;
                         display: inline-block;
