--- a/client/src/Page/Auth/DetailsUser/EditProfile.scss
+++ b/client/src/Page/Auth/DetailsUser/EditProfile.scss
@@ -55,14 +55,14 @@
                             height: 40px;
                             padding-left: 20px;
                             outline: none;
-                            border: 1px solid colors.$shadow;
+                            border: 1px solid colors.$color-shadow;
                             border-radius: 5px;
                             transition: 0.2s;
 
                             &:hover,
                             &:focus,
                             &:active {
-                                box-shadow: 0px 0px 3px colors.$shadow;
+                                box-shadow: 0px 0px 3px colors.$color-shadow;
                             }
                         }
                     }
@@ -80,7 +80,7 @@
 
                 & button {
                     width: 80%;
-                    background: colors.$color-btn;
+                    background: colors.$color-red;
                     padding: 5px 20px;
                     text-align: center;
                     color: aliceblue;
@@ -93,14 +93,14 @@
                     transition: 0.2s;
 
                     &:hover {
-                        box-shadow: 0px 0px 3px colors.$color-btn;
+                        box-shadow: 0px 0px 3px colors.$color-red;
                     }
                 }
 
                 .error-message {
                     position: absolute;
                     bottom: 100%;
-                    color: colors.$color-btn;
+                    color: colors.$color-red;
                 }
             }
         }
