--- a/client/src/Page/Auth/Register.scss
+++ b/client/src/Page/Auth/Register.scss
@@ -9,7 +9,7 @@
     left: 50%;
     transform: translate(-50%, 0%);
     background-color: white;
-    box-shadow: 0px 0px 3px colors.$shadow;
+    box-shadow: 0px 0px 3px colors.$color-shadow;
 
     & .register-title {
         position: relative;
@@ -63,14 +63,14 @@
                     height: 50px;
                     padding-left: 20px;
                     outline: none;
-                    border: 1px solid colors.$shadow;
+                    border: 1px solid colors.$color-shadow;
                     border-radius: 5px;
                     transition: 0.2s;
 
                     &:hover,
                     &:focus,
                     &:active {
-                        box-shadow: 0px 0px 3px colors.$shadow;
+                        box-shadow: 0px 0px 3px colors.$color-shadow;
                     }
                 }
             }
@@ -83,7 +83,7 @@
                 outline: none;
                 border: none;
                 color: white;
-                background-color: colors.$color-btn;
+                background-color: colors.$color-red;
                 border-radius: 5px;
                 position: absolute;
                 left: 50%;
@@ -98,7 +98,7 @@
                 }
 
                 &:hover {
-                    box-shadow: 0px 0px 3px colors.$color-btn;
+                    box-shadow: 0px 0px 3px colors.$color-red;
                 }
             }
         }
