--- a/client/src/Page/errors/NotFound.scss
+++ b/client/src/Page/errors/NotFound.scss
@@ -1,3 +1,5 @@
+@use '../../colors';
+
 .not-found {
     width: 100%;
     height: 100%;
@@ -5,13 +7,36 @@
     &__contents {
         font-size: 22px;
         text-align: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
+        margin-bottom: 50px;
 
-        a {
-            text-decoration: none;
+        & div:nth-child(1) {
+            color: colors.$color-red;
+            font-weight: bold;
+            font-size: 220px;
+        }
+
+        & div:nth-child(2) {
+            // color: colors.$color-red;
+            font-weight: bold;
+            font-size: 32px;
+        }
+
+        & div:nth-child(3) {
+            margin-top: 20px;
+
+            & a {
+                width: fit-content;
+                height: fit-content;
+                color: white;
+                border-radius: 5px;
+                background-color: colors.$color-red;
+                padding: 10px;
+                text-decoration: none;
+            }
         }
     }
 }
