--- a/client/src/_colors.scss
+++ b/client/src/_colors.scss
@@ -1,8 +1,7 @@
-$text-color: #ebe9e6;
-$black-color: #1c1c1c;
+$color-text: #ebe9e6;
+$color-black: #1c1c1c;
 $color-fullLayout: #dddddd;
-$color-btn: #d41138;
-$color-hover: rgb(193, 193, 193);
-$shadow: rgb(132, 135, 135);
-$background-color: #f5f5f5;
-
+$color-red: #d41138;
+$color-hover: #c1c1c1;
+$color-shadow: #848787;
+$color-background: #f5f5f5;
