--- a/client/src/components/render_item/SearchListPopup.scss
+++ b/client/src/components/render_item/SearchListPopup.scss
@@ -16,7 +16,7 @@
         transition: 0.2s;
 
         &:hover {
-            background-color: colors.$background-color;
+            background-color: colors.$color-background;
         }
 
         & img {
@@ -40,7 +40,7 @@
 
             & .product-price {
                 & .price {
-                    color: colors.$color-btn;
+                    color: colors.$color-red;
                     font-weight: bold;
                     // margin-left: 5px;
                 }
@@ -48,7 +48,7 @@
                 & .discount {
                     margin-left: 20px;
                     // text-decoration: line-through;
-                    color: colors.$shadow;
+                    color: colors.$color-shadow;
                 }
             }
         }
