--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,5 @@
 @use "./colors";
+
 * {
     margin: 0;
     padding: 0;
@@ -15,7 +16,7 @@ body {
 #root {
     width: 100%;
     height: 100%;
-    background-color: colors.$background-color;
+    background-color: colors.$color-background;
     overflow: hidden;
 
 }
