--- a/client/src/Page/Products/ProductPage.scss
+++ b/client/src/Page/Products/ProductPage.scss
@@ -28,6 +28,7 @@
 
             .product-name {
                 font-size: 24px;
+                font-weight: bold;
             }
 
             & .product-price {
@@ -44,6 +45,42 @@
                     // text-decoration: line-through;
                     color: colors.$color-shadow;
                 }
+            }
+
+            & .product-action {
+                height: 50px;
+
+                .quantity {
+                    width: 90px;
+                    height: 100%;
+                    position: relative;
+
+                    & button {
+                        height: 100%;
+                        width: 30px;
+                        position: absolute;
+                    }
+
+                    & button:last-child {
+                        margin-left: 80px;
+                    }
+
+                    & input {
+                        text-align: center;
+                        margin-left: 30px;
+                        position: absolute;
+                        font-size: 28px;
+                        width: 50px;
+                        height: 100%;
+
+                        &::-webkit-outer-spin-button,
+                        &::-webkit-inner-spin-button {
+                            -webkit-appearance: none;
+                            margin: 0;
+                        }
+                    }
+                }
+
             }
         }
     }
