--- a/client/src/components/render_item/HotItem.scss
+++ b/client/src/components/render_item/HotItem.scss
@@ -1,23 +1,24 @@
 .hot-item {
     width: 33.333%;
     display: flex;
-    justify-content: center;
-    left: 100%;
-    flex-shrink: 0;
-    height: 100%;
     position: absolute;
+    justify-content: center;
+    flex-shrink: 0;
+    left: 100%;
+    height: 100%;
 
     .wrap-hot-item {
-        position: absolute;
-        width: 90%;
-        top: 0;
-        bottom: 0;
+        position: relative;
+        // width: 94%;
+        // top: 0;
+        // bottom: 0;
 
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
+
 
         .detail {
             position: absolute;
@@ -26,28 +27,38 @@
             height: 40%;
             color: #fff;
             width: 100%;
-            background: rgba(0, 0, 0, 0.7);
 
-            .price {
-                font-size: 22px;
-                padding: 4px;
-                border-top: 1px solid;
-                border-bottom: 1px solid;
-                margin: auto;
-                margin-top: 10px;
-                width: max-content;
-            }
-
-            a {
+            .wrap_detail {
+                width: 100%;
                 position: absolute;
-                left: 50%;
-                bottom: 9%;
-                transform: translateX(-50%);
-                padding: 10px 20px;
-                background-color: red;
-                color: #fff;
-                border-radius: 5px;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background: rgba(0, 0, 0, 0.7);
+
+                .price {
+                    font-size: 22px;
+                    padding: 4px;
+                    border-top: 1px solid;
+                    border-bottom: 1px solid;
+                    margin: auto;
+                    margin-top: 10px;
+                    width: max-content;
+                }
+
+                a {
+                    position: absolute;
+                    left: 50%;
+                    bottom: 9%;
+                    transform: translateX(-50%);
+                    padding: 10px 20px;
+                    background-color: red;
+                    color: #fff;
+                    border-radius: 5px;
+                }
             }
+
+
         }
     }
 
