Add ratings table, add UI for rating

--- a/client/src/_colors.scss
+++ b/client/src/_colors.scss
@@ -5,3 +5,5 @@ $color-red: #d41138;
 $color-hover: #c1c1c1;
 $color-shadow: #848787;
 $color-background: #f5f5f5;
+$color-rate: #f9f905;
+$color-rate-checked: #fd6d07;
