--- a/client/src/Page/Products/ProductPage.scss
+++ b/client/src/Page/Products/ProductPage.scss
@@ -26,7 +26,7 @@
             width: 60%;
             height: 100%;
 
-            .product-name {
+            & .product-name {
                 font-size: 24px;
                 font-weight: bold;
             }
