--- a/client/src/components/home_content/content/HotProducts.scss
+++ b/client/src/components/home_content/content/HotProducts.scss
@@ -1,36 +1,41 @@
-.hot-products {
-    height: 301px;
-    padding-top: 19px;
-    width: 100%;
-    background-color: #fff;
+// .hot-products {
+//     height: 265px;
+//     padding-top: 19px;
+//     width: 100%;
+//     background-color: #fff;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     position: relative;
+//     overflow: hidden;
+
+.wrap_hot_products {
+    width: 1257px;
+    height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    overflow: hidden;
+    margin: auto;
 
-    .wrap_hot_products {
-        width: 1257px;
-        height: 100%;
+    .hot_products_slice {
+        width: 70%;
+        height: 250px;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .thumbnail_category {
+        flex: 1;
+        flex-direction: column;
         display: flex;
+        justify-content: space-around;
 
-        .hot_products_slice {
-            width: 70%;
-            height: 100%;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .thumbnail_category {
-            flex: 1;
-
-            .thumbnail_category_item {
-                width: 100%;
-                height: 50%;
-            }
+        .thumbnail_category_item {
+            width: 100%;
+            height: 47%;
         }
     }
 }
+
+// }
 
 
 .back {
