--- a/client/src/components/render_item/CategoryItem.scss
+++ b/client/src/components/render_item/CategoryItem.scss
@@ -17,6 +17,16 @@
             border-radius: 50%;
             overflow: hidden;
             background-color: #f5f5f5;
+
+            .wrapicon {
+                width: 50%;
+                height: 50%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
         }
 
         .category_name {
