--- a/client/src/components/render_item/HotItem.scss
+++ b/client/src/components/render_item/HotItem.scss
@@ -1,3 +1,5 @@
+@use '../../colors';
+
 .hot-item {
     width: 33.333%;
     display: flex;
@@ -49,10 +51,10 @@
                 a {
                     position: absolute;
                     left: 50%;
-                    bottom: 9%;
+                    bottom: 5%;
                     transform: translateX(-50%);
                     padding: 10px 20px;
-                    background-color: red;
+                    background-color: colors.$color-red;
                     color: #fff;
                     border-radius: 5px;
                 }
