--- a/client/src/components/render_item/ProductItem.scss
+++ b/client/src/components/render_item/ProductItem.scss
@@ -8,6 +8,7 @@
         position: relative;
         border-radius: 3px;
         background-color: #fff;
+        box-shadow: 0px 0px 6px;
         overflow: hidden;
         transition: transform linear 0.1s;
 
