update home and scrollbar

--- a/client/src/Page/Home/Home.scss
+++ b/client/src/Page/Home/Home.scss
@@ -1,8 +1,10 @@
 .home {
     width: 100%;
+    height: max-content;
+    position: absolute;
 
     .footer {
-        margin-bottom: 0xp;
+        // margin-bottom: 0xp;
         // position: absolute;
         // bottom: 0px;
     }
