--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,6 +1,16 @@
 .App {
-    width: 100%;
     height: 100%;
-    overflow-Y: scroll;
-    // min-width: 1040px;
+    overflow-y: scroll;
+    position: relative;
+    width: 100%;
+    flex-direction: row;
+    display: flex;
+}
+
+.App::-webkit-scrollbar {
+    display: none;
+}
+
+.App {
+    -webkit-user-select: none
 }
