--- a/client/src/components/render_item/ProductItem.scss
+++ b/client/src/components/render_item/ProductItem.scss
@@ -86,6 +86,18 @@
                 bottom: 10px;
             }
         }
+
+        .discount {
+            position: absolute;
+            bottom: 36%;
+            background-color: colors.$color-red;
+            color: #fff;
+            padding: 3px 9px;
+            font-weight: 600;
+            font-size: 16px;
+            border-radius: 5px;
+            margin-left: 10px;
+        }
     }
 }
 
