--- a/client/src/_colors.scss
+++ b/client/src/_colors.scss
@@ -4,6 +4,6 @@ $color-fullLayout: #dddddd;
 $color-red: #d41138;
 $color-hover: #c1c1c1;
 $color-shadow: #848787;
-$color-background: #dbdbdb;
+$color-background: rgb(231 231 231 / 81%);
 $color-rate: #f9f905;
 $color-rate-checked: #fd6d07;
