--- a/client/src/Page/Products/ProductPage.scss
+++ b/client/src/Page/Products/ProductPage.scss
@@ -208,5 +208,80 @@
     width: 450px;
     height: 0;
     padding-top: 100%;
+    overflow: hidden;
     position: relative;
+
+    .product-page-image-item {
+        position: absolute;
+        width: max-content;
+        height: max-content;
+        bottom: 5%;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+
+        li {
+            transition: all ease 0.5s;
+            height: 10px;
+            width: 10px;
+            border-radius: 50%;
+            overflow: hidden;
+            border: 1px solid #d41138;
+            list-style: none;
+            margin: 0 10px;
+
+            &.active {
+                background-color: #d41138;
+                transform: scale(1.4);
+            }
+        }
+    }
+
+    .nextbtn {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 35px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            svg {
+                transform: translateX(0px);
+            }
+        }
+
+        svg {
+            transition: transform ease 0.3s;
+            font-size: 35px;
+            color: colors.$color-red;
+            transform: translateX(35px);
+        }
+    }
+
+    .privebtn {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 35px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            svg {
+                transform: translateX(0px);
+            }
+        }
+
+        svg {
+            transition: transform ease 0.3s;
+            font-size: 35px;
+            color: colors.$color-red;
+            transform: translateX(-35px);
+        }
+    }
 }
