--- a/client/src/Page/Products/ProductRating.scss
+++ b/client/src/Page/Products/ProductRating.scss
@@ -14,7 +14,7 @@
         }
 
         &:last-child {
-            height: 18px;
+            height: 100%;
             // width: attr(rate-percent);
             width: var(--rate-percent);
             color: colors.$color-red;
