--- a/client/src/components/render_item/ProductItem.scss
+++ b/client/src/components/render_item/ProductItem.scss
@@ -71,19 +71,21 @@
         .home__produt-item-action {
             display: flex;
             justify-content: space-between;
-            padding: 4px 10px;
+            padding: 12px 10px;
+            align-items: center;
+            position: relative;
 
             a {
                 height: max-content;
                 padding: 8px 15px;
                 position: absolute;
                 right: 10px;
-                background-color: colors.$color-red;
+                background-color: #d41138;
                 border-radius: 5px;
                 font-size: 18px;
-                color: colors.$color-text;
+                color: #ebe9e6;
                 font-weight: 600;
-                bottom: 10px;
+                top: -3px;
             }
         }
     }
