--- a/client/src/components/render_item/SearchListPopup.scss
+++ b/client/src/components/render_item/SearchListPopup.scss
@@ -7,6 +7,7 @@
     width: 51%;
     border-radius: 5px;
     background-color: white;
+    display: none;
 
     & .product-item {
         height: 75px;
