Clean code on Header

--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -258,6 +258,9 @@
                         align-items: center;
                         color: colors.$color-text;
                         justify-content: center;
+                        border: none;
+                        outline: none;
+                        cursor: pointer;
                     }
 
                     &:hover {
