--- a/client/src/components/search_content/SearchContent.scss
+++ b/client/src/components/search_content/SearchContent.scss
@@ -1,6 +1,6 @@
 @use "../../colors.scss";
 
-.wrapsearch_content {
+.wrap_search_content {
     width: 1257px;
     height: 500px;
     display: flex;
