--- a/client/src/Page/Products/ProductPage.scss
+++ b/client/src/Page/Products/ProductPage.scss
@@ -204,12 +204,13 @@
 
     &-comments {
         background-color: white;
-        overflow: hidden;
+        overflow: scroll;
         // position: absolute;
         // left: 50%;
         // top: 63%;
         // transform: translateX(-50%);
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         border: 1px solid red;
         width: 1257px;
