--- a/client/src/components/render_item/CommentItem.scss
+++ b/client/src/components/render_item/CommentItem.scss
@@ -5,9 +5,9 @@
     width: 500px;
     height: fit-content;
     min-height: 100px;
-    border: 1px solid red;
+    // border: 1px solid red;
     display: flex;
-    border-radius: 5px;
+    // border-radius: 5px;
 
     & .content-left {
         width: 65px;
