--- a/client/src/components/render_item/CommentItem.scss
+++ b/client/src/components/render_item/CommentItem.scss
@@ -1,18 +1,18 @@
 @use '../../colors';
 
 .comment-item {
-    background-color: white;
-    width: 500px;
+    background-color: rgb(250, 250, 250);
+    width: 95%;
     height: fit-content;
     min-height: 100px;
-    // border: 1px solid red;
+    margin-top: 10px;
     display: flex;
-    // border-radius: 5px;
+    border-radius: 10px;
 
     & .content-left {
         width: 65px;
         // position: absolute;
-        height: 500%;
+        // height: 500%;
 
         img {
             margin-top: 5px;
@@ -22,7 +22,7 @@
     }
 
     & .content-right {
-        width: calc(500px - 155px);
+        width: calc(100% - 30px);
         height: fit-content;
         margin-left: 5px;
 
