Update Link to Product

--- a/client/src/components/render_item/ProductItem.scss
+++ b/client/src/components/render_item/ProductItem.scss
@@ -104,6 +104,7 @@
 .productsearch_item {
     width: 247px;
     padding: 0 12px;
+    cursor: pointer;
 
     .contentitemsearch {
         position: relative;
