--- a/client/src/Page/Products/ProductPage.scss
+++ b/client/src/Page/Products/ProductPage.scss
@@ -217,10 +217,54 @@
         height: fit-content;
         min-height: 500px;
         margin-top: 20px;
+        border-radius: 5px;
+
+        & .comment-count {
+            height: 40px;
+            margin-left: 10px;
+            font-size: 24px;
+            font-weight: bold;
+        }
 
         & .comment-writter {
-            min-height: 150px;
-            border: 1px solid red;
+            height: 150px;
+            // border: 1px solid red;
+            display: flex;
+
+            & .left {
+                width: 70px;
+                margin-top: 0px;
+                height: 150px;
+                margin-left: 15px;
+
+                & .avatar {
+                    margin-left: 5px;
+                    width: 60px;
+                    height: 60px;
+                    border-radius: 50%;
+                    overflow: hidden;
+
+                    img {
+                        width: inherit;
+                    }
+                }
+
+            }
+
+            & .right {
+                height: 150px;
+
+                & textarea {
+                    font-size: 16px;
+                    padding-top: 10px;
+                    padding-left: 10px;
+                    height: 100px;
+                    width: 1150px;
+                    resize: none;
+                    outline: none;
+                    font-family: 'Times New Roman', Times, serif;
+                }
+            }
         }
 
         & .comment-list {
