--- a/client/src/components/render_item/CommentItem.scss
+++ b/client/src/components/render_item/CommentItem.scss
@@ -2,7 +2,7 @@
 
 .comment-item {
     background-color: rgb(250, 250, 250);
-    width: 95%;
+    width: 98%;
     height: fit-content;
     min-height: 100px;
     margin-top: 10px;
@@ -11,14 +11,20 @@
 
     & .content-left {
         width: 65px;
+
         // position: absolute;
         // height: 500%;
-
-        img {
-            margin-top: 5px;
-            margin-left: 5px;
+        & .avatar {
+            width: 65px;
+            height: 65px;
             border-radius: 50%;
+            overflow: hidden;
+
+            img {
+                width: 65px;
+            }
         }
+
     }
 
     & .content-right {
