--- a/client/src/components/render_item/CommentItem.scss
+++ b/client/src/components/render_item/CommentItem.scss
@@ -15,13 +15,13 @@
         // position: absolute;
         // height: 500%;
         & .avatar {
-            width: 65px;
-            height: 65px;
+            width: 60px;
+            height: 60px;
             border-radius: 50%;
             overflow: hidden;
 
             img {
-                width: 65px;
+                width: 60px;
             }
         }
 
@@ -30,7 +30,7 @@
     & .content-right {
         width: calc(100% - 30px);
         height: fit-content;
-        margin-left: 5px;
+        margin-left: 10px;
 
         & .content-title {
             width: inherit;
@@ -54,6 +54,10 @@
         & .content-data {
             width: inherit;
             overflow: hidden;
+
+            p {
+                white-space: pre-line;
+            }
         }
     }
 }
