--- a/client/src/Page/Products/ProductPage.scss
+++ b/client/src/Page/Products/ProductPage.scss
@@ -238,7 +238,7 @@
                 margin-left: 15px;
 
                 & .avatar {
-                    margin-left: 5px;
+                    // margin-left: 5px;
                     width: 60px;
                     height: 60px;
                     border-radius: 50%;
@@ -285,6 +285,19 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+
+            & button {
+                margin-top: 15px;
+                background-color: colors.$color-red;
+                color: white;
+                outline: none;
+                border: none;
+                border-radius: 5px;
+                height: 40px;
+                width: 100px;
+                cursor: pointer;
+                font-weight: bold;
+            }
         }
     }
 
