--- a/client/src/components/search_content/SearchContent.scss
+++ b/client/src/components/search_content/SearchContent.scss
@@ -145,6 +145,7 @@
             .sortitem {
                 padding: 10px 20px;
                 margin-right: 10px;
+                position: relative;
                 background-color: #fff;
                 border-radius: 3px;
 
@@ -152,7 +153,7 @@
                     margin-right: 115px;
                 }
 
-                &:nth-child(4) {
+                &:nth-child(5) {
                     position: relative;
 
                     &:hover {
@@ -162,38 +163,82 @@
                     }
                 }
 
+                &::before {
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                }
+
+            }
+
+            .sortprice {
+                border-radius: 3px;
+                position: relative;
+                width: 240px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                background-color: #fff;
+
+                .sortprice-name {
+                    margin: 10px 20px;
+                }
+
+                svg {
+                    margin: 10px 20px;
+                }
+
+                &:hover {
+                    .sortprice_item {
+                        display: block;
+
+                        &::after {
+                            content: '';
+                            position: absolute;
+                            width: 100%;
+                            height: 50%;
+                            top: 0;
+                            left: 0;
+                            transform: translateY(-50%);
+                            z-index: -1;
+                        }
+                    }
+                }
+
                 .sortprice_item {
                     position: absolute;
-                    left: 0;
-                    width: 100%;
                     top: 120%;
                     background-color: #fff;
-                    box-shadow: 0px 0px 1px #000;
+                    z-index: 1;
+                    width: 100%;
                     border-radius: 3px;
                     display: none;
-                    z-index: 1;
 
                     span {
-                        display: inline-block;
-                        margin: 10px 20px;
-                        cursor: pointer;
+                        display: block;
+                        padding: 10px 20px;
+                        width: 100%;
 
                         &:hover {
                             color: colors.$color-red;
+                            cursor: pointer;
                         }
                     }
-
-                    &::after {
-                        content: "";
-                        position: absolute;
-                        width: 100%;
-                        height: 30px;
-                        z-index: 0;
-                        left: 0;
-                        top: 0;
-                        transform: translateY(-70%);
-                    }
                 }
+            }
+
+            .activesortprice {
+                color: colors.$color-red;
+            }
+
+            .activeSort {
+                width: max-content;
+                height: 100%;
+                background-color: colors.$color-red;
+                color: #fff;
             }
         }
 
